# GeneralsGameCode

./: AUTOMATION_100_PERCENT.md  AUTOMATION_DEBUG_RESULTS.md  AUTOMATION_SUMMARY.md  AUTOMATION_V2_PROGRESS.md  AUTOMATION_VALIDATION.md  BATCH_CONVERSION_RESULTS.json  BRANCH_REVIEW_SESSION_20.md  CI_TEST_RESULTS_ANALYSIS.md  CLANG_INTEGRATION.md  CMAKE_BUILD_INTEGRATION.md  CMakeLists.txt  CMakePresets.json  COMMENT_PATTERN_GUIDE.md  COMPILER_WARNINGS_BASELINE.md  COMPLETE_AUTOMATION_PIPELINE.md  CRASH_REVIEW_ANALYSIS.md  CURRENT_STATUS.txt  DIALOG_CLASS_GENERATION.md  DIALOG_INVESTIGATION_BATCH_3.md  ENVIRONMENT_SETUP_GUIDE.md  GENCI_REVIEW_SUMMARY.md  IMPORTANT_CRASH_DIALOG_ISSUE.md  INFRASTRUCTURE_BLOCKERS.md  LIGHTSCENE_DIALOG_TODO_ANALYSIS.md  MFC_TO_WXWIDGETS_TOOLKIT.md  MINGW_COMPILATION_REPORT.md  MINGW_TECHNICAL_ANALYSIS.md  MINGW_TOOLS_MFC_REVIEW.md  MINGW_W64_BUILD_REVIEW.md  MINGW_WARNINGS_ANALYSIS.md  NOTE_REVIEW.md  PHASE_2_COMPILATION_STATUS.md  PHASE_2_COMPILATION_SUCCESS_AND_ISSUES.md  PHASE_2_COMPLETE.md  PHASE_2_INTEGRATION_COMPLETE.md  PR_2069_REVIEW.md  QUICK_REFERENCE.md  SESSION_20_REVIEW_SUMMARY.md  SESSION_20_SUMMARY.md  SESSION_20_WIREFRAME_POLYGON_ANALYSIS.md  (+29 more)
.github/workflows/: build-toolchain.yml  ci.yml  mingw-w64-build.yml  test-mingw-build.yml  w3dview-wxwidgets-test.yml
Core/GameEngine/: CMakeLists.txt
Core/Libraries/Source/EABrowserDispatch/: CMakeLists.txt
Core/Libraries/Source/EABrowserEngine/: CMakeLists.txt
Core/Tools/Autorun/: GameText.cpp
Core/Tools/DebugWindow/: CMakeLists.txt  dbgwinapp.cpp  dbgwinframe.cpp  dbgwinframe.h  (+2 more)
Core/Tools/W3DView/: AboutDialog_wx.cpp  AboutDialog_wx.h  AssetInfo.cpp  AssetInfo.h  BackgroundColorDialog_wx.cpp  BackgroundColorDialog_wx.h  CMakeLists.txt  DIALOG_TEMPLATE.md  DisplaySpeedDialog_wx.cpp  DisplaySpeedDialog_wx.h  EngineString.h  Globals_wx.cpp  GraphicView_wx.cpp  GraphicView_wx.h  SESSION_40_PART12_HANDLER_CONTINUATION2.md  StdAfx_wx.h  Utils.cpp  Utils.h  Utils_wx.cpp  ViewerAssetMgr.cpp  ViewerAssetMgr.h  ViewerScene.cpp  W3DViewUI.cpp  W3DViewUI.h  test_xrc_loading.cpp  w3dcompat_wx.cpp  w3dcompat_wx.h  w3dviewapp_wx.cpp  w3dviewapp_wx.h  w3dviewdoc_wx.cpp  w3dviewdoc_wx.h  w3dviewframe_wx.cpp  w3dviewframe_wx.h  w3dviewtree_wx.cpp  w3dviewtree_wx.h  w3dviewview_wx.cpp  w3dviewview_wx.h
Core/Tools/W3DView/dialogs/: Aboutbox_wx.cpp  Aboutbox_wx.h  AddToLineup_wx.cpp  AddToLineup_wx.h  AddToLineup_wx_events_generated.txt  AnimatedSoundDialog_wx.cpp  AnimatedSoundDialog_wx.h  AnimatedSoundDialog_wx_events_generated.txt  BackgroundBmp_wx.cpp  BackgroundBmp_wx.h  BackgroundBmp_wx_events_generated.txt  BackgroundColor_wx.cpp  BackgroundColor_wx.h  BackgroundColor_wx_events_generated.txt  BackgroundObject_wx.cpp  BackgroundObject_wx.h  BackgroundObject_wx_events_generated.txt  BoneManagement_wx.cpp  BoneManagement_wx.h  BoneManagement_wx_events_generated.txt  CameraDistance_wx.cpp  CameraDistance_wx.h  CameraDistance_wx_events_generated.txt  CameraSettings_wx.cpp  CameraSettings_wx.h  CameraSettings_wx_events_generated.txt  ColorForm_wx.cpp  ColorForm_wx.h  ColorPicker_wx.cpp  ColorPicker_wx.h  ColorPicker_wx_events_generated.txt  ColorSel_wx.cpp  ColorSel_wx.h  ColorSel_wx_events_generated.txt  Displayspeed_wx.cpp  Displayspeed_wx.h  EditLod_wx.cpp  EditLod_wx.h  EditLod_wx_events_generated.txt  Formview_wx.cpp  (+130 more)
Core/Tools/W3DView/ui/: idd_aboutbox.xrc  idd_add_to_lineup.xrc  idd_animated_sound_dialog.xrc  idd_background_bmp.xrc  idd_background_color.xrc  idd_background_object.xrc  idd_bone_management.xrc  idd_camera_distance.xrc  idd_camera_settings.xrc  idd_color_form.xrc  idd_color_picker.xrc  idd_color_sel.xrc  idd_displayspeed.xrc  idd_edit_lod.xrc  idd_formview.xrc  idd_gamma_dialog.xrc  idd_light_ambient_dialog.xrc  idd_light_scene_dialog.xrc  idd_make_aggregate.xrc  idd_opacity.xrc  idd_opacity_vector.xrc  idd_particle_blur_time_key.xrc  idd_particle_frame_key.xrc  idd_particle_rotation_key.xrc  idd_particle_size.xrc  idd_play_sound_effect.xrc  idd_prop_page_advanim_mixing.xrc  idd_prop_page_advanim_report.xrc  idd_prop_page_animation.xrc  idd_prop_page_emitter_color.xrc  idd_prop_page_emitter_frame.xrc  idd_prop_page_emitter_gen.xrc  idd_prop_page_emitter_linegroup.xrc  idd_prop_page_emitter_lineprops.xrc  idd_prop_page_emitter_particle.xrc  idd_prop_page_emitter_physics.xrc  idd_prop_page_emitter_rotation.xrc  idd_prop_page_emitter_size.xrc  idd_prop_page_emitter_user.xrc  idd_prop_page_hierarchy.xrc  (+19 more)
Generals/Code/: CMakeLists.txt
Generals/Code/Fuzzers/: BIGFileFuzzer.cpp  CMakeLists.txt
Generals/Code/Tools/W3DView/: CMakeLists.txt
GeneralsMD/Code/Tools/W3DView/: CMakeLists.txt
cmake/: SANITIZERS.md  TargetExports.cmake  bink.cmake  compilers.cmake  config-build.cmake  dx8.cmake  dx9.cmake  fuzzer-example.cpp  miles.cmake  mingw-w64-i686.cmake  mingw.cmake  reactos-atl.cmake  toolchain-mingw-w64-i686.cmake  widl.cmake
cmake/toolchains/: clang-mingw-w64-i686.cmake  mingw-w64-i686.cmake
docs/: CAMERA_H_DEPENDENCY_FIX.md  MISSING_DEPENDENCY_ANALYSIS.md  PHASE1_RC2XRC_CONTROL_ID_BUG_FIX.md  PHASE25_AUTOMATION_PLAN.md  PHASE2_SCRIPT_CONSOLIDATION_PLAN.md  PHASE_2_GUIDE.md  README.md  VALIDATION_REAL_POSITIVE.md
examples/w3dview/: README.md  dialog_mapping.json
scripts/: README.md  analyze_mfc_dialog.py  batch_convert_all_dialogs.py  batch_phase25_all.py  batch_phase25_conversion.py  batch_phase3_with_compile_test.py  build_dialog_mapping.py  diagnose_build_issue.sh  fix_copyright.py  fix_phase2_notify_events.py  generate_cmake_sources.py  generate_phase25_enhanced.py  generate_phase25_infrastructure.py  generate_phase3_logic.py  generate_xrc_init.py  integrate_phase25.py  integrate_phase2_events.py  mfc2wx_events.py  mfc_to_wx_patterns.py  rc2xrc.py  rc2xrc_v1.py  rc2xrc_v2.py  test_build_pipeline.sh  test_compile_dialogs.sh  test_rc2xrc_fix.py  test_xrc2cpp_sanitization.py  validate_xrc_files.py  xrc2cpp.py
scripts/archive/: rc2xrc_v3.py  rc2xrc_v3_bitmap.py  rc2xrc_v4.py
testing-tools/: README.md  dialog_tester.py  run_smoke_test.sh  screenshot_compare.py
(+98 files in other folders)
