# TheSuperHackers: Define source files as INTERFACE libraries
# Following pattern established in PR #709
if(BUILD_TOOLS AND wxWidgets_FOUND)
    # wxWidgets INTERFACE library - source files only
    # Executable built in Generals/Code/Tools/W3DView/CMakeLists.txt
    set(W3DVIEW_WX_SRC
        "w3dviewapp_wx.cpp"
        "w3dviewapp_wx.h"
        "w3dviewframe_wx.cpp"
        "w3dviewframe_wx.h"
        "w3dviewdoc_wx.cpp"
        "w3dviewdoc_wx.h"
        "w3dviewview_wx.cpp"
        "w3dviewview_wx.h"
        "w3dviewtree_wx.cpp"
        "w3dviewtree_wx.h"
        "BackgroundColorDialog_wx.cpp"
        "BackgroundColorDialog_wx.h"
        "w3dcompat_wx.h"
        "StdAfx_wx.h"
    )
    
    add_library(corei_w3dview_wx INTERFACE)
    target_sources(corei_w3dview_wx INTERFACE ${W3DVIEW_WX_SRC})
endif()

if(WIN32 OR "${CMAKE_SYSTEM}" MATCHES "Windows")
    # MFC INTERFACE library - source files only (from PR #709)
    # Executable built in Generals/Code/Tools/W3DView/CMakeLists.txt
    set(W3DVIEW_SRC
        "AddToLineupDialog.cpp"
        "AddToLineupDialog.h"
        "AdvancedAnimSheet.cpp"
        "AdvancedAnimSheet.h"
        "AggregateNameDialog.cpp"
        "AggregateNameDialog.h"
        "AmbientLightDialog.cpp"
        "AmbientLightDialog.h"
        "AnimatedSoundOptionsDialog.cpp"
        "AnimatedSoundOptionsDialog.h"
        "AnimationPropPage.cpp"
        "AnimationPropPage.h"
        "AnimationSpeed.cpp"
        "AnimationSpeed.h"
        "AnimMixingPage.cpp"
        "AnimMixingPage.h"
        "AnimReportPage.cpp"
        "AnimReportPage.h"
        "AssetInfo.cpp"
        "AssetInfo.h"
        "AssetPropertySheet.cpp"
        "AssetPropertySheet.h"
        "AssetTypes.h"
        "BackgroundBMPDialog.cpp"
        "BackgroundBMPDialog.h"
        "BackgroundColorDialog.cpp"
        "BackgroundColorDialog.h"
        "BackgroundObjectDialog.cpp"
        "BackgroundObjectDialog.h"
        "BoneMgrDialog.cpp"
        "BoneMgrDialog.h"
        "CameraDistanceDialog.cpp"
        "CameraDistanceDialog.h"
        "CameraSettingsDialog.cpp"
        "CameraSettingsDialog.h"
        "ColorBar.cpp"
        "ColorBar.h"
        "ColorPicker.cpp"
        "ColorPicker.h"
        "ColorPickerDialogClass.cpp"
        "ColorPickerDialogClass.h"
        "ColorSelectionDialog.cpp"
        "ColorSelectionDialog.h"
        "ColorUtils.cpp"
        "ColorUtils.h"
        "DataTreeView.cpp"
        "DataTreeView.h"
        "DeviceSelectionDialog.cpp"
        "DeviceSelectionDialog.h"
        "DialogToolbar.cpp"
        "DialogToolbar.h"
        "DirectoryDialog.cpp"
        "DirectoryDialog.h"
        "EditLODDialog.cpp"
        "EditLODDialog.h"
        "EmitterColorPropPage.cpp"
        "EmitterColorPropPage.h"
        "EmitterFramePropPage.cpp"
        "EmitterFramePropPage.h"
        "EmitterGeneralPropPage.cpp"
        "EmitterGeneralPropPage.h"
        "EmitterInstanceList.cpp"
        "EmitterInstanceList.h"
        "EmitterLineGroupPropPage.cpp"
        "EmitterLineGroupPropPage.h"
        "EmitterLinePropPage.cpp"
        "EmitterLinePropPage.h"
        "EmitterParticlePropPage.cpp"
        "EmitterParticlePropPage.h"
        "EmitterPhysicsPropPage.cpp"
        "EmitterPhysicsPropPage.h"
        "EmitterPropertySheet.cpp"
        "EmitterPropertySheet.h"
        "EmitterRotationPropPage.cpp"
        "EmitterRotationPropPage.h"
        "EmitterSizePropPage.cpp"
        "EmitterSizePropPage.h"
        "EmitterUserPropPage.cpp"
        "EmitterUserPropPage.h"
        "GammaDialog.cpp"
        "GammaDialog.h"
        "Globals.cpp"
        "Globals.h"
        "GraphicView.cpp"
        "GraphicView.h"
        "HierarchyPropPage.cpp"
        "HierarchyPropPage.h"
        "LODDefs.h"
        "MainFrm.cpp"
        "MainFrm.h"
        "MeshPropPage.cpp"
        "MeshPropPage.h"
        "OpacitySettingsDialog.cpp"
        "OpacitySettingsDialog.h"
        "OpacityVectorDialog.cpp"
        "OpacityVectorDialog.h"
        "ParticleBlurTimeKeyDialog.cpp"
        "ParticleBlurTimeKeyDialog.h"
        "ParticleFrameKeyDialog.cpp"
        "ParticleFrameKeyDialog.h"
        "ParticleRotationKeyDialog.cpp"
        "ParticleRotationKeyDialog.h"
        "ParticleSizeDialog.cpp"
        "ParticleSizeDialog.h"
        "PlaySoundDialog.cpp"
        "PlaySoundDialog.h"
        "ResolutionDialog.cpp"
        "ResolutionDialog.h"
        "resource.h"
        "RestrictedFileDialog.cpp"
        "RestrictedFileDialog.h"
        "RingColorPropPage.cpp"
        "RingColorPropPage.h"
        "RingGeneralPropPage.cpp"
        "RingGeneralPropPage.h"
        "RingPropertySheet.cpp"
        "RingPropertySheet.h"
        "RingSizePropPage.cpp"
        "RingSizePropPage.h"
        "SaveSettingsDialog.cpp"
        "SaveSettingsDialog.h"
        "ScaleDialog.cpp"
        "ScaleDialog.h"
        "SceneLightDialog.cpp"
        "SceneLightDialog.h"
        "ScreenCursor.cpp"
        "ScreenCursor.h"
        "SoundEditDialog.cpp"
        "SoundEditDialog.h"
        "SphereColorPropPage.cpp"
        "SphereColorPropPage.h"
        "SphereGeneralPropPage.cpp"
        "SphereGeneralPropPage.h"
        "SpherePropertySheet.cpp"
        "SpherePropertySheet.h"
        "SphereSizePropPage.cpp"
        "SphereSizePropPage.h"
        #"SphereUtils.cpp" # Unused and does not compile
        #"SphereUtils.h" # Unused and does not compile
        "StdAfx.cpp"
        "StdAfx.h"
        #"TextureMgrDialog.cpp" # Unused
        #"TextureMgrDialog.h" # Unused
        "TexturePathDialog.cpp"
        "TexturePathDialog.h"
        #"TextureSettingsDialog.cpp" # Unused
        #"TextureSettingsDialog.h" # Unused
        "Toolbar.cpp"
        "Toolbar.h"
        "Utils.cpp"
        "Utils.h"
        "Vector3RndCombo.cpp"
        "Vector3RndCombo.h"
        "ViewerAssetMgr.cpp"
        "ViewerAssetMgr.h"
        "ViewerScene.cpp"
        "ViewerScene.h"
        "VolumeRandomDialog.cpp"
        "VolumeRandomDialog.h"
        "W3DView.cpp"
        "W3DView.h"
        "W3DViewDoc.cpp"
        "W3DViewDoc.h"
        "W3DViewView.cpp"
        "W3DViewView.h"
    )

    add_library(corei_w3dview INTERFACE)

    target_sources(corei_w3dview INTERFACE ${W3DVIEW_SRC})

    target_precompile_headers(corei_w3dview INTERFACE
        "StdAfx.h"
        [["always.h"]]
        [["STLUtils.h"]]
        [["WWCommon.h"]]
    )

    if(WIN32 OR "${CMAKE_SYSTEM}" MATCHES "Windows")
        target_sources(corei_w3dview INTERFACE W3DView.rc)
    endif()

else()
    # No GUI tools available on this platform
    message(STATUS "W3DView: No GUI framework available, skipping build")
endif()
